--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="product-list"></div>
         <section class="products">
                 <!-- Itt lesznek dinamikusan megjelenítve a termékek kártyái -->
-                <div class="product-card">
+                <!-- <div class="product-card">
                     <img src="img/choco_bliss.jpg" alt="Csokoládé Fantázia">
                     <h3>Csokoládé Fantázia</h3>
                     <p>Édes és krémes tejcsokoládé, tökéletes ajándék!</p>
@@ -113,7 +113,7 @@
                     <p>Ár: 1500 Ft</p>
                     <button class="add-to-cart-btn">Kosárba</button>
                 </div>
-            </div>
+            </div> -->
         </section>
     </main>
 
